CminusCompiler/src/main/java/comp430/cminuscompiler/CminusParser.java
package comp430.cminuscompiler;

// Generated from Cminus.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CminusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE=1, VOID=2, RETURN=3, POINTDEC=4, POINT=5, LEFTPAREN=6, RIGHTPAREN=7, 
		Ifloop=8, Elseloop=9, Forloop=10, PRINT=11, MAIN=12, VAR=13, LEFTCURLY=14, 
		RIGHTCURLY=15, PLUS=16, MINUS=17, MULT=18, DIVIDE=19, PLUSEQUAL=20, MINUSEQUAL=21, 
		MULTEQUAL=22, DIVIDEQUAL=23, LESSTHAN=24, GREATERTHAN=25, LESSEQUAL=26, 
		GREATEREQUAL=27, ASSIGN=28, ID=29, INT=30, COMMENT=31, WS=32, STRING=33, 
		CHAR=34, NULLCHAR=35;
	public static final int
		RULE_startRule = 0, RULE_main = 1, RULE_progStatements = 2, RULE_statement = 3, 
		RULE_funcPointerDec = 4, RULE_type = 5, RULE_funcCallParam = 6, RULE_funcPointer = 7, 
		RULE_funcDecParam = 8, RULE_printStatement = 9, RULE_varDec = 10, RULE_varAssign = 11, 
		RULE_var = 12, RULE_assignment = 13, RULE_mathExpr = 14, RULE_op = 15, 
		RULE_exp = 16, RULE_assignOp = 17, RULE_loops = 18, RULE_ifConditions = 19, 
		RULE_forConditions = 20, RULE_compare = 21, RULE_skip = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "main", "progStatements", "statement", "funcPointerDec", 
			"type", "funcCallParam", "funcPointer", "funcDecParam", "printStatement", 
			"varDec", "varAssign", "var", "assignment", "mathExpr", "op", "exp", 
			"assignOp", "loops", "ifConditions", "forConditions", "compare", "skip"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'void'", "'return'", "'&'", "'@'", "'('", "')'", "'if'", 
			"'else'", "'for'", "'printf'", "'main'", null, "'{'", "'}'", "'+'", "'-'", 
			"'*'", "'/'", "'+='", "'-='", "'*='", "'/='", "'<'", "'>'", "'<='", "'>='", 
			"'='", null, null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE", "VOID", "RETURN", "POINTDEC", "POINT", "LEFTPAREN", "RIGHTPAREN", 
			"Ifloop", "Elseloop", "Forloop", "PRINT", "MAIN", "VAR", "LEFTCURLY", 
			"RIGHTCURLY", "PLUS", "MINUS", "MULT", "DIVIDE", "PLUSEQUAL", "MINUSEQUAL", 
			"MULTEQUAL", "DIVIDEQUAL", "LESSTHAN", "GREATERTHAN", "LESSEQUAL", "GREATEREQUAL", 
			"ASSIGN", "ID", "INT", "COMMENT", "WS", "STRING", "CHAR", "NULLCHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cminus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CminusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartRuleContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode LEFTCURLY() { return getToken(CminusParser.LEFTCURLY, 0); }
		public ProgStatementsContext progStatements() {
			return getRuleContext(ProgStatementsContext.class,0);
		}
		public TerminalNode RIGHTCURLY() { return getToken(CminusParser.RIGHTCURLY, 0); }
		public TerminalNode EOF() { return getToken(CminusParser.EOF, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterStartRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitStartRule(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			type();
			setState(47);
			main();
			setState(48);
			match(LEFTCURLY);
			setState(49);
			progStatements();
			setState(50);
			match(RIGHTCURLY);
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(CminusParser.MAIN, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(MAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgStatementsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ProgStatementsContext progStatements() {
			return getRuleContext(ProgStatementsContext.class,0);
		}
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public ProgStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterProgStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitProgStatements(this);
		}
	}

	public final ProgStatementsContext progStatements() throws RecognitionException {
		ProgStatementsContext _localctx = new ProgStatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_progStatements);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				statement();
				setState(57);
				progStatements();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				loops();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				loops();
				setState(61);
				progStatements();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode NULLCHAR() { return getToken(CminusParser.NULLCHAR, 0); }
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public VarAssignContext varAssign() {
			return getRuleContext(VarAssignContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public FuncDecParamContext funcDecParam() {
			return getRuleContext(FuncDecParamContext.class,0);
		}
		public FuncCallParamContext funcCallParam() {
			return getRuleContext(FuncCallParamContext.class,0);
		}
		public FuncPointerDecContext funcPointerDec() {
			return getRuleContext(FuncPointerDecContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TYPE:
					{
					setState(65);
					varDec();
					}
					break;
				case VAR:
					{
					setState(66);
					varAssign();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(69);
				match(NULLCHAR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				printStatement();
				setState(72);
				match(NULLCHAR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				funcDecParam();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				funcCallParam();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				funcPointerDec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncPointerDecContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode LEFTPAREN() { return getToken(CminusParser.LEFTPAREN, 0); }
		public TerminalNode POINTDEC() { return getToken(CminusParser.POINTDEC, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode RIGHTPAREN() { return getToken(CminusParser.RIGHTPAREN, 0); }
		public TerminalNode ASSIGN() { return getToken(CminusParser.ASSIGN, 0); }
		public TerminalNode POINT() { return getToken(CminusParser.POINT, 0); }
		public FuncPointerDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcPointerDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterFuncPointerDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitFuncPointerDec(this);
		}
	}

	public final FuncPointerDecContext funcPointerDec() throws RecognitionException {
		FuncPointerDecContext _localctx = new FuncPointerDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcPointerDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			type();
			setState(80);
			match(LEFTPAREN);
			setState(81);
			match(POINTDEC);
			setState(82);
			var();
			{
			setState(83);
			type();
			}
			setState(84);
			match(RIGHTPAREN);
			setState(85);
			match(ASSIGN);
			setState(86);
			match(POINT);
			setState(87);
			var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(CminusParser.TYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallParamContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode LEFTPAREN() { return getToken(CminusParser.LEFTPAREN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RIGHTPAREN() { return getToken(CminusParser.RIGHTPAREN, 0); }
		public FuncPointerContext funcPointer() {
			return getRuleContext(FuncPointerContext.class,0);
		}
		public FuncCallParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCallParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterFuncCallParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitFuncCallParam(this);
		}
	}

	public final FuncCallParamContext funcCallParam() throws RecognitionException {
		FuncCallParamContext _localctx = new FuncCallParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcCallParam);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				var();
				setState(92);
				match(LEFTPAREN);
				setState(93);
				type();
				setState(94);
				var();
				setState(95);
				match(RIGHTPAREN);
				}
				break;
			case POINTDEC:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				funcPointer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncPointerContext extends ParserRuleContext {
		public TerminalNode POINTDEC() { return getToken(CminusParser.POINTDEC, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode LEFTPAREN() { return getToken(CminusParser.LEFTPAREN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RIGHTPAREN() { return getToken(CminusParser.RIGHTPAREN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public FuncPointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcPointer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterFuncPointer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitFuncPointer(this);
		}
	}

	public final FuncPointerContext funcPointer() throws RecognitionException {
		FuncPointerContext _localctx = new FuncPointerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcPointer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(POINTDEC);
			setState(101);
			var();
			setState(102);
			match(LEFTPAREN);
			setState(103);
			type();
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				{
				setState(104);
				var();
				}
				break;
			case INT:
			case CHAR:
				{
				setState(105);
				exp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(108);
			match(RIGHTPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDecParamContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode LEFTPAREN() { return getToken(CminusParser.LEFTPAREN, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(CminusParser.RIGHTPAREN, 0); }
		public TerminalNode LEFTCURLY() { return getToken(CminusParser.LEFTCURLY, 0); }
		public ProgStatementsContext progStatements() {
			return getRuleContext(ProgStatementsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(CminusParser.RETURN, 0); }
		public TerminalNode NULLCHAR() { return getToken(CminusParser.NULLCHAR, 0); }
		public TerminalNode RIGHTCURLY() { return getToken(CminusParser.RIGHTCURLY, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public FuncPointerContext funcPointer() {
			return getRuleContext(FuncPointerContext.class,0);
		}
		public TerminalNode VOID() { return getToken(CminusParser.VOID, 0); }
		public FuncDecParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterFuncDecParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitFuncDecParam(this);
		}
	}

	public final FuncDecParamContext funcDecParam() throws RecognitionException {
		FuncDecParamContext _localctx = new FuncDecParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcDecParam);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				type();
				setState(111);
				var();
				setState(112);
				match(LEFTPAREN);
				setState(113);
				type();
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(114);
					var();
					}
					break;
				case INT:
				case CHAR:
					{
					setState(115);
					exp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(118);
				match(RIGHTPAREN);
				setState(119);
				match(LEFTCURLY);
				setState(120);
				progStatements();
				setState(121);
				match(RETURN);
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(122);
					var();
					}
					break;
				case INT:
				case CHAR:
					{
					setState(123);
					exp();
					}
					break;
				case POINTDEC:
					{
					setState(124);
					funcPointer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(127);
				match(NULLCHAR);
				setState(128);
				match(RIGHTCURLY);
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(VOID);
				setState(131);
				var();
				setState(132);
				match(LEFTPAREN);
				setState(133);
				type();
				setState(136);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(134);
					var();
					}
					break;
				case INT:
				case CHAR:
					{
					setState(135);
					exp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(138);
				match(RIGHTPAREN);
				setState(139);
				match(LEFTCURLY);
				setState(140);
				progStatements();
				setState(141);
				match(RIGHTCURLY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(CminusParser.PRINT, 0); }
		public TerminalNode LEFTPAREN() { return getToken(CminusParser.LEFTPAREN, 0); }
		public TerminalNode STRING() { return getToken(CminusParser.STRING, 0); }
		public TerminalNode RIGHTPAREN() { return getToken(CminusParser.RIGHTPAREN, 0); }
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterPrintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitPrintStatement(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(PRINT);
			setState(146);
			match(LEFTPAREN);
			setState(147);
			match(STRING);
			setState(148);
			match(RIGHTPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public MathExprContext mathExpr() {
			return getRuleContext(MathExprContext.class,0);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitVarDec(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_varDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			type();
			setState(151);
			var();
			setState(152);
			assignment();
			setState(153);
			mathExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarAssignContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public MathExprContext mathExpr() {
			return getRuleContext(MathExprContext.class,0);
		}
		public VarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitVarAssign(this);
		}
	}

	public final VarAssignContext varAssign() throws RecognitionException {
		VarAssignContext _localctx = new VarAssignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			var();
			setState(156);
			assignment();
			setState(157);
			mathExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(CminusParser.VAR, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CminusListener ) ((CminusListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
